--- a/package.json
+++ b/package.json
@@ -5,5 +5,30 @@
   "main": "index.js",
   "author": "Maxim Vynohradov",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "lint": "yarn eslint ./cypress",
+    "lint:fix": "yarn eslint ./cypress --fix"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-chai-friendly": "^0.5.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-json-format": "^2.0.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
+  }
 }
