--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "cy:dev": "yarn cypress open",
+    "cy:dev:debug": "DEBUG=cypress:* yarn cypress open",
+    "cy:run": "cypress run",
     "lint": "yarn eslint ./cypress",
     "lint:fix": "yarn eslint ./cypress --fix"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "cypress": "^4.4.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-chai-friendly": "^0.5.0",
