--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "babel-eslint": "^10.1.0",
     "cypress": "^4.4.1",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-chai-friendly": "^0.5.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-json-format": "^2.0.1",
+    "eslint-plugin-mocha": "^6.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.7"
   },
