--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "cypress": "^4.4.1",
+    "cypress-localstorage-commands": "^1.1.8",
     "eslint": "^6.8.0",
     "eslint-plugin-chai-friendly": "^0.5.0",
     "eslint-plugin-cypress": "^2.10.3",
