--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-eslint": "^10.1.0",
     "cypress": "^4.4.1",
     "cypress-localstorage-commands": "^1.1.8",
+    "cypress-terminal-report": "^1.2.1",
     "eslint": "^6.8.0",
     "eslint-plugin-chai-friendly": "^0.5.0",
     "eslint-plugin-cypress": "^2.10.3",
