--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-eslint": "^10.1.0",
     "cypress": "^4.4.1",
     "cypress-localstorage-commands": "^1.1.8",
+    "cypress-multi-reporters": "^1.2.4",
     "cypress-terminal-report": "^1.2.1",
     "eslint": "^6.8.0",
     "eslint-plugin-chai-friendly": "^0.5.0",
@@ -24,7 +25,11 @@
     "eslint-plugin-json-format": "^2.0.1",
     "eslint-plugin-mocha": "^6.3.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.1.7"
+    "lint-staged": "^10.1.7",
+    "mocha": "^7.1.1",
+    "mochawesome": "^6.1.0",
+    "mochawesome-merge": "^4.0.3",
+    "mochawesome-report-generator": "^5.1.0"
   },
   "husky": {
     "hooks": {
